--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -272,7 +272,7 @@ set(SERVER_SOURCES
 		server/game/systems/HealthSystem.cpp
         server/game/systems/PlayerWeaponSystem.cpp
 		server/game/systems/PlayerCollisionSystem.cpp
-		server/game/systems/BorderLimitSystem.cpp server/game/systems/BorderLimitSystem.hpp)
+		server/game/systems/BorderLimitSystem.cpp server/game/systems/BorderLimitSystem.hpp server/game/dataHolders/DataMusic.cpp server/game/dataHolders/DataMusic.hpp server/game/dataHolders/DataSound.cpp server/game/dataHolders/DataSound.hpp)
 
 set(SERVER_INCLUDES
 		server/client/Client.hpp
@@ -322,7 +322,7 @@ set(SERVER_INCLUDES
 		server/game/systems/PlayerCollisionSystem.hpp
         server/game/GameData.hpp
 		server/game/components/WaveComponent.hpp
-		server/game/dataHolders/DataText.cpp server/game/dataHolders/DataText.hpp server/game/dataHolders/DataFont.cpp server/game/dataHolders/DataFont.hpp server/game/systems/BorderLimitSystem.cpp server/game/systems/BorderLimitSystem.hpp)
+		server/game/dataHolders/DataText.cpp server/game/dataHolders/DataText.hpp server/game/dataHolders/DataFont.cpp server/game/dataHolders/DataFont.hpp server/game/systems/BorderLimitSystem.cpp server/game/systems/BorderLimitSystem.hpp server/game/dataHolders/DataMusic.cpp server/game/dataHolders/DataMusic.hpp server/game/dataHolders/DataSound.cpp server/game/dataHolders/DataSound.hpp)
 
 
 set(ENEMIES_INCLUDES
